# rs-hardware

./: Cargo.toml  REAMDE.md  build.rs
.cargo/: config.toml
src/: main.rs
src/drivers/icm426xx/: .Cargo.lock.swp
src/drivers/icm426xx/src/: .register_bank.rs.swp  .uninitialized.rs.swp  lib.rs  ll.rs  ready.rs  register_bank.rs  uninitialized.rs
